# bRAC

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  bRAC.desktop  build-all.sh  build.rs  build_all.bat  build_all.sh  config.yml  flake.nix  install.sh  main  main.rs  readme.md  ru.themixray.bRAC.desktop  shell.nix  test.txt  uninstall.sh
.cargo/: config.toml
docs/: auth_mode.md  avatars.md  colored_usernames.md  compiling.md  crate.md  cross_compile.md  faq.md  message_formats.md  url.md  user_agents.md  wrac.md
examples/: protocol.rs
misc/: bRAC.desktop  build.sh  create-desktop.sh  install.sh  system-install.bat  system-install.sh  system-uninstall.bat  system-uninstall.sh  uninstall.sh  user-install.sh  user-uninstall.sh
src/: chat.rs  config.rs  lib.rs  main.rs  proto.rs  rac.rs  term.rs  util.rs
src/chat/: config.rs  ctx.rs  gtk_gui.rs  gui.rs  minimal_tui.rs  mod.rs  pretty_tui.rs
src/chat/gui/: mod.rs  page.rs  preferences.rs
src/chat/gui/styles/: style.css
src/chat/gui/widgets/: imp.rs  mod.rs
src/chat/styles/: dark.css  light.css  style.css
src/proto/: mod.rs  rac.rs  wrac.rs
