[package]
name = "bRAC"
version = "0.1.2+2.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
regex = "1.11.1"
colored = "3.0.0"
lazy_static = "1.5.0"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_yml = "0.0.12"
crossterm = { version = "0.29.0", optional = true }
homedir = { version = "0.3.4", optional = true }
native-tls = { version = "0.2.14", optional = true }
gtk4 = { version = "0.9.6", optional = true }
cfg-if = "1.0.0"

[features]
default = ["ssl", "homedir", "gtk_gui"]
ssl = ["dep:native-tls"]
pretty_tui = ["dep:crossterm"]
gtk_gui = ["dep:gtk4"]
homedir = ["dep:homedir"]
