[package]
name = "bRAC"
version = "0.1.6+2.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
regex = "1.11.1"
lazy_static = "1.5.0"
serde_yml = "0.0.12"
homedir = "0.3.4"
native-tls = "0.2.14"
clap = { version = "4.5.36", features = ["derive", "cargo"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
# gtk4 = { version = "0.9.6", optional = true }
chrono = "0.4.40"
serde_default = "0.2.0"
socks = "0.3.4"
libnotify = { version = "1.0.3", optional = true }
notify-rust = { version = "4.11.7", optional = true }
gdk-pixbuf = { version = "0.3.0", optional = true } # DO NOT UPDATE
winapi = { version = "0.3.9", optional = true, features = ["wincon", "winuser"] }
tungstenite = "0.27.0"
reqwest = { version = "0.12.20", features = ["blocking"] }
libadwaita = { version = "0.8.0", optional = true, features = ["v1_5"] }
# glycin = { version = "2.1.1", optional = true }
futures = "0.3.31"
# gio = { version = "0.20.12", optional = true }

[build-dependencies]
winresource = { version = "0.1.20", optional = true }

[features]
default = ["gtk"]
gtk = ["dep:libadwaita"]
libnotify = ["dep:libnotify", "dep:gdk-pixbuf"]
notify-rust = ["dep:notify-rust"]
winapi = ["dep:winapi", "dep:winresource"]
